# Advent-of-FPGA-2025

./: .gitignore  Makefile  README.md  main.cpp
day1/src/: day1.ml  dune
day1/test/: day1_golden_solution.py  dune  gen_verilog.ml  test_day1.ml
day8/src/: day8.ml  dune
day8/test/: day8_golden_solution.py  dune  gen_verilog.ml  main.cpp
